<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <EditText
        android:id="@+id/Main2_et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/Main2_et_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/Main2_et_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/Main2_et_body"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/Main2_et_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/Main2_et_date"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/Main2_et_followers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/Main2_et_followers"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/Main2_et_following"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:ems="10"
        android:hint="@string/Main2_et_following"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/Main2_et_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/Main2_et_posts"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="24sp"
        android:padding="10dp" />

    <Button
        android:id="@+id/Main2_btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:text="@string/Main_btn_add"
        android:textAllCaps="false"
        android:textSize="@dimen/Main_btn_add" />
</LinearLayout>