<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="#C57E96"
    android:orientation="vertical"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/Main3_tv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="25sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:rowCount="4">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_rowSpan="3"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/Main3_tv_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/Main2_et_followers"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/Main3_tv_nfollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Main3_tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:text="@string/Main2_et_following"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/Main3_tv_nfollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Main3_tv_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:text="@string/Main2_et_posts"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/Main3_tv_npost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/Main3_btn_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:text="@string/Main3_btn_follow" />

        <TextView
            android:id="@+id/Main3_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:background="#FBFAFA"
            android:gravity="center"
            android:textColor="#050505"
            android:textSize="25sp" />
    </GridLayout>

    <TextView
        android:id="@+id/Main3_tv_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="20dp"
        android:background="#E91E63"
        android:padding="10dp"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#878383"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Main3_btn_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/like"
            android:textAllCaps="false"
            android:textColor="#0C0C0C"
            android:textSize="@dimen/Main_btn_add" />

        <Button
            android:id="@+id/Main3_btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textColor="#0C0C0C"
            android:textSize="@dimen/Main_btn_add" />

        <Button
            android:id="@+id/Main3_btn_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/comment"
            android:textAllCaps="false"
            android:textColor="#0C0C0C"
            android:textSize="@dimen/Main_btn_add" />
    </LinearLayout>
</LinearLayout>